# t1-t2_mwpm

./: README.md  pyproject.toml
docs/: t1t2_noise.md
notebooks/: model_test.ipynb  test_project.ipynb
t1t2_mwpm/: __init__.py  gates.py  t1t2_noise.py  util.py
t1t2_mwpm/circuits/: __init__.py  rep_code.py  util.py
t1t2_mwpm/matching/: __init__.py  matching.py
t1t2_mwpm/models/: __init__.py  library.py  model.py  util.py
t1t2_mwpm/setup/: setup.py
tests/: test_t1t2_noise.py
