[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.8.12"
name = "t1t2_mwpm"
description = "MWPM decoder with amplitude and phase damping noise" 
version = "0.1.0"
authors = [
    { name = "Marc Serra Peralta", email = "marcserraperalta@gmail.com" }
]
maintainers = [
    { name = "Marc Serra Peralta", email = "marcserraperalta@gmail.com" }
]
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
    "numpy",
    "stim",
    "pymatching"
]
keywords = ["mwpm", "amplitude-damping", "phase-damping"]

[tool.setuptools.packages.find]
include = ["t1t2_mwpm"]  # package names should match these glob patterns (["*"] by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[project.optional-dependencies]
dev = ["pip-tools", "pytest"]

